after validation fixes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="nav-wrapper">
                     <button class="menu-button"><i class="fas fa-bars"></i></button>
                     <div class="logo" id="circle">
-                        <span class="logo-company-name"><p>CRIOS</p></span>
-                        <span class="logo-inner-text"><p>FREE PSD TEMPLATE</p></span>
+                        <p class="logo-company-name">CRIOS</p>
+                        <p class="logo-inner-text">FREE PSD TEMPLATE</p>
                     </div>
                     <form action="#" class="search-form">
                         <input type="text" class="search-field">
@@ -151,7 +151,7 @@
                                 Susspendisse vel leo efficitur, venenatis est ut, tincidunt nibh.
                                 Suspendise lobortis lectus vel imperdiet utlamcorper.
                             </p>
-                            <span class="ceo-name"><p>John Doe</p></span> 
+                            <p class="ceo-name">John Doe</p> 
                             <p>CEO at Crios.com</p>
                         </div>
                     </div>
